--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,3 +130,8 @@ button.btn-primary {
     fill: white;
   }
 }
+
+a.nav-link-active {
+  color: $primary;
+  border-bottom: 1px solid $gray-300;
+}
