--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@ header.header {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: 1px solid $gray-300;
 }
 
 div.appContainer {
@@ -25,12 +26,63 @@ div.appContainer {
   padding: 0;
 }
 
-form.form {
-  padding: 20px;
-  width: min(800px, 100vw);
+@mixin bordered() {
   box-shadow: $box-shadow-sm;
   border-radius: $border-radius;
+  padding: 20px;
+}
+
+div.page {
+  margin: 0 auto;
+  width: 100vw;
+  min-height: calc(100vh - 50px);
+  height: auto;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+
+  article {
+    width: min(1000px, 100vw);
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+    line-height: 2rem;
+    border-radius: 5px;
+    @include bordered();
+
+    h1,
+    h2 {
+      color: $primary;
+      font-weight: 500;
+    }
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    h2 {
+      font-size: 1.4rem;
+    }
+
+    p {
+      font-size: 1rem;
+      color: $dark;
+      font-weight: 400;
+      text-align: justify;
+
+      @media screen and (min-width: 768px) {
+        padding: 0 50px;
+      }
+    }
+  }
+}
+
+form.form {
+  width: min(800px, 100vw);
   align-self: center;
+  @include bordered();
 
   fieldset {
     display: flex;
@@ -133,5 +185,5 @@ button.btn-primary {
 
 a.nav-link-active {
   color: $primary;
-  border-bottom: 1px solid $gray-300;
+  font-weight: $font-weight-bold;
 }
