--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -179,10 +179,8 @@ div.confirmDialog {
   color: $dark;
 }
 
-a.btn-danger,
-a.btn-primary,
-button.btn-danger,
-button.btn-primary {
+button.actionButton,
+a.actionButton {
   min-height: 50px;
   height: auto;
   display: flex;
