--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -158,7 +158,7 @@ div.confirmModalHeader {
 
 div.loading {
   width: 100%;
-  height: 200px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -177,6 +177,11 @@ div.warningDialog {
 div.confirmDialog {
   @include dialog();
   color: $dark;
+}
+
+div.loadingDialog {
+  @include dialog();
+  color: $primary;
 }
 
 button.actionButton,
@@ -299,5 +304,11 @@ div.consultResult {
   div.row {
     width: 100%;
     text-align: center;
+  }
+}
+
+btn-light {
+  svg {
+    fill: $dark;
   }
 }
